# arborist-mcp-dev

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  pyproject.toml
arborist_mcp/: __init__.py
crates/arborist-core/: Cargo.toml
crates/arborist-core/src/: api.rs  api_patch_validation.rs  api_source_query.rs  include_graph.rs  index_migration.rs  index_schema.rs  index_store.rs  language.rs  lib.rs  model.rs  patching.rs  query.rs  semantic.rs  source_overlay.rs  symbol_dependency.rs  symbol_extractor.rs  symbol_index_model.rs  symbol_index_state.rs  symbol_index_workspace.rs  symbol_map.rs  symbol_position.rs  symbol_query.rs  symbol_query_execution.rs  symbol_read.rs  symbol_search.rs  symbol_summary.rs  symbol_trace.rs  symbols.rs  tests.rs  vfs.rs  workspace_edit_preview.rs  workspace_scan.rs
crates/arborist-core/src/api_patch_validation/: path_index_context.rs  replay.rs  result_validation.rs  sarif.rs  tests.rs  workspace_context.rs
crates/arborist-core/src/api_patch_validation/path_index_context/: discovery.rs  graph.rs  neighborhood.rs  trace.rs
crates/arborist-core/src/api_patch_validation/workspace_context/: discovery.rs  graph.rs  neighborhood.rs  trace.rs
crates/arborist-core/src/api_source_query/: index.rs  workspace.rs
crates/arborist-core/src/include_graph/: reverse.rs
crates/arborist-core/src/index_migration/: execute.rs  plan.rs
crates/arborist-core/src/index_schema/: metadata.rs  migration.rs  mod.rs  schema.rs  tables.rs  validation.rs
crates/arborist-core/src/index_store/: core.rs  loading.rs  metadata.rs  mod.rs  refresh.rs  validation.rs
crates/arborist-core/src/language/: c.rs  io.rs  parser.rs  paths.rs  positions.rs  tree.rs
crates/arborist-core/src/model/: patch_validation.rs  primitives.rs  query_results.rs  symbols.rs  tests.rs  trace_patch_results.rs  validation.rs  workspace_edit_preview.rs
crates/arborist-core/src/model/query_results/: index_results.rs  list_search_results.rs  read_results.rs  virtual_results.rs
crates/arborist-core/src/model/tests/: index.rs  misc.rs  mod.rs  patch.rs  position.rs  symbols.rs  trace.rs
crates/arborist-core/src/model/trace_patch_results/: graph.rs  patch_context.rs  replay.rs  validation.rs
crates/arborist-core/src/patching/: api.rs  c_validation.rs  commit_gate.rs  python_bindings.rs  python_imports.rs  python_patterns.rs  python_references.rs  python_replacement.rs  python_visibility.rs  reference_validation.rs  result_builder.rs  syntax_validation.rs  target_resolution.rs
crates/arborist-core/src/query/: owners.rs  validation.rs
crates/arborist-core/src/semantic/: c.rs  paths.rs  python.rs
crates/arborist-core/src/source_overlay/: validation.rs
crates/arborist-core/src/symbol_dependency/: c.rs  refresh.rs  resolution.rs
crates/arborist-core/src/symbol_extractor/: c.rs  python.rs
crates/arborist-core/src/symbol_index_state/: fingerprints.rs  freshness.rs  loading.rs  migration.rs  mod.rs  paths.rs  state.rs
crates/arborist-core/src/symbol_index_workspace/: incremental.rs  live.rs
crates/arborist-core/src/symbol_position/: selection.rs
crates/arborist-core/src/symbol_query/: list.rs  read.rs  search.rs  trace.rs
crates/arborist-core/src/symbol_query_execution/: list.rs  read.rs  search.rs  trace.rs
crates/arborist-core/src/symbol_search/: filters.rs
crates/arborist-core/src/symbol_summary/: selection.rs
crates/arborist-core/src/symbol_trace/: graph.rs  neighborhood.rs
crates/arborist-core/src/symbols/: index_queries.rs  override_queries.rs  tests.rs  workspace_queries.rs
crates/arborist-core/src/tests/: c_patching.rs  c_symbol_graph.rs  index_refresh.rs  language_invariants.rs  patch_bindings.rs  patch_replay.rs  path_entrypoints.rs  persisted_index.rs  query_parity.rs  skeleton.rs  source_overlay.rs  support.rs  trace_regressions.rs  trace_semantics.rs  tree_query.rs  workspace_edit_preview.rs
crates/arborist-core/src/vfs/: buffer.rs  patch_context.rs  queries.rs  state.rs  tests.rs
crates/arborist-core/src/workspace_scan/: limits.rs  walker.rs
crates/arborist-py/: Cargo.toml
crates/arborist-py/src/: index_bindings.rs  json_args.rs  lib.rs  patch_bindings.rs  patch_validation.rs  path_context.rs  source_query_bindings.rs  symbol_queries.rs  tests.rs  vfs_bindings.rs
crates/arborist-py/src/symbol_queries/: list.rs  mod.rs  read.rs  search.rs  trace.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: patch_preview.rs  semantic_skeleton.rs  source_overlay_queries.rs  symbol_index_inspection.rs  symbol_index_queries.rs  tree_query.rs  workspace_edit_json.rs  workspace_edit_preview.rs
(+316 files in other folders)
