[workspace]
members = [
    "crates/arborist-core",
    "crates/arborist-py",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Codex"]

[workspace.dependencies]
anyhow = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tree-sitter = "0.25"
tree-sitter-c = "0.24"
tree-sitter-python = "0.25"
