[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "arborist-mcp"
version = "0.1.0"
description = "MCP-compatible Python gateway over a Rust semantic parsing core."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
]

[project.scripts]
arborist-mcp = "arborist_mcp.gateway:main"

[tool.maturin]
python-source = "python"
module-name = "arborist_mcp._arborist_core"
manifest-path = "crates/arborist-py/Cargo.toml"
features = ["extension-module"]
