[package]
name = "arborist-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1.0"

[dependencies.arborist-core]
path = "../crates/arborist-core"

[[bin]]
name = "tree_query"
path = "fuzz_targets/tree_query.rs"
test = false
doc = false
bench = false

[[bin]]
name = "semantic_skeleton"
path = "fuzz_targets/semantic_skeleton.rs"
test = false
doc = false
bench = false

[[bin]]
name = "patch_preview"
path = "fuzz_targets/patch_preview.rs"
test = false
doc = false
bench = false

[[bin]]
name = "workspace_edit_preview"
path = "fuzz_targets/workspace_edit_preview.rs"
test = false
doc = false
bench = false

[[bin]]
name = "symbol_index_inspection"
path = "fuzz_targets/symbol_index_inspection.rs"
test = false
doc = false
bench = false

[[bin]]
name = "workspace_edit_json"
path = "fuzz_targets/workspace_edit_json.rs"
test = false
doc = false
bench = false
