[package]
name = "arborist-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "_arborist_core"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
arborist-core = { path = "../arborist-core" }
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py310"] }
serde.workspace = true
serde_json.workspace = true
