[package]
name = "arborist-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "_arborist_core"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
anyhow.workspace = true
arborist-core = { path = "../arborist-core" }
pyo3 = { version = "0.24", features = ["abi3-py310", "multiple-pymethods"] }
serde.workspace = true
serde_json.workspace = true
